# rust-discord-bot

./: .gitignore  Cargo.toml  README.md  requirements.txt
src/: commands.rs  listeners.rs  main.rs  prelude.rs  utils.rs
src/commands/: backgroundremove.rs  help.rs  meta.rs  mod.rs  obs.rs  utility.rs
src/commands/obs/: join.rs  leave.rs
src/commands/utility/: background_remove.rs  meta.rs
src/data/: cache.rs  error.rs
src/functions/: background_remove.py
src/listeners/: message.rs  ready.rs  voice_state_update.rs
src/utils/: framework.rs  macros.rs  parse.rs
