[package]
name = "rust-first-bot"
version = "0.1.0"
authors = ["cianyyz <25750319+cianyyz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "signal"] }
dotenv = "0.15.0"
log = "0.4.11"
config = "0.10.1"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]

